== 2.5.0

* Bugfix: Remove-annotations wasn't properly finding test/spec files, and
  wasn't even looking for FactoryGirl factories under the new naming
  convention.
* Bugfix: Load the Rakefile from the current directory, not the first Rakefile
  in our load path.
* Added support for new FactoryGirl naming convention.
* Fix behavior of route annotations in newer versions of Rake that don't spit
  out the CWD as their first line of output.
* Routes can now be appended, pre-pended, or removed -- and do sane things in
  all cases.
* Expose all `position_*` variables as CLI params.
* Make `ENV ['position']` work as a default for all the `ENV ['position_*']`
  variables.
* Fixed that schema kept prepending additional newlines
* Updates to make annotate smarter about when to touch a model
* Recognize column+type, and don't change a file unless the column+type
  combination of the new schema are different than that of the old (i.e., don't
  regenerate if columns happen to be in a different order. That's just how life
  is sometimes)
* Works better with Rails 3
* Bugfix: schema kept prepending additional newlines
* Updates to make annotate smarter about when to touch a model
* Recognize column+type, and don't change a file unless the column+type combination of the new schema are different than that of the old (i.e., don't regenerate if columns happen to be in a different order. That's just how life is sometimes.)
* Grab old specification even if it has \r\n as line endings rather than pure \ns
* Various warning and specification fixes
* Fix "no such file to load -- annotate/annotate_models (MissingSourceFile)"
  error (require statements in tasks now use full path to lib files)
* warn about macros, to mitigate when we're included during a production run,
  not just a rakefile run -- possibly at the expense of too much noise
* Adding rake as a runtime dependency
* If the schema is already in the model file, it will be replaced into the same