@@ -140,6 +140,21 @@ By default, columns will be sorted in database order (i.e. the order in which mi
 
 If you prefer to sort alphabetically so that the results of
 annotation are consistent regardless of what order migrations are executed in, use  --sort.
+== Markdown
+
+The format produced is actually MultiMarkdown, making use of the syntax
+extension for tables.  It's recommended you use `kramdown` as your parser if
+you want to use this format.  If you're using `yard` to generate documentation,
+specify a format of markdown with `kramdown` as the provider by adding this to
+your `.yardopts` file:
+
+    --markup markdown
+    --markup-provider kramdown
+
+Be sure to add this to your `Gemfile` as well:
+
+    gem 'kramdown', :groups => [:development], :require => false
+
 
 == WARNING
 
